k8s/appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: appointment-service
