k8s/patient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: patient-service
